--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 sm-padding wow fadeInRight" data-wow-delay="300ms">
-                        <img src="img/content-1.png" alt="content-img">
+                        <img src="img/foto etnochem.png" alt="content-img">
                     </div>
                 </div>
             </div>
@@ -263,11 +263,11 @@
             <div class="container">
                 <div class="row content-wrap">
                    <div class="col-lg-6 sm-padding wow fadeInLeft" data-wow-delay="300ms">
-                        <img src="img/content-2.png" alt="content-img">
+                        <img src="img/app-mockup.png" alt="content-img">
                     </div>
                     <div class="col-lg-6 sm-padding">
                         <div class="content-info wow fadeInRight" data-wow-delay="300ms">
-                            <span>Features</span>
+                            <span>Aplikasi Etnochem</span>
                             <h2>Track Productivity &amp; Keep Your Projects On The Budget!</h2>
                             <p>We provide marketing services to startups and small businesses to looking for a partner of their digital media, design &amp; development, lead generation and communications requirents.</p>
                             <ul class="content-feature">
@@ -322,8 +322,8 @@
             <div class="map-pattern"></div>
              <div class="container">
                 <div class="section-heading mb-40 text-center wow fadeInUp" data-wow-delay="300ms">
-                    <span>Explore The Features</span>
-                    <h2>Thousands Of People <br>Using Our SaasBiz Apps.</h2>
+                    <h2>Testimonnials</h2>
+                    <span>Tanggapan dari pengguna dan konsumen kami</span>
                 </div>
                  <div class="row testi-wrap">
                      <div id="testimonial-carousel-2" class="testimonial-carosel-2 owl-carousel">
