--- a/services-1.html
+++ b/services-1.html
@@ -120,8 +120,32 @@
 		</header> <!--.header-section -->
 		
         <div class="header-height"></div>
-        
-        <section class="page-header padding">
+        <section class="hero-section hero-4 padding">
+            <div class="wave-1"></div>
+            <div class="container">
+                <div class="hero-wrap">
+                    <div class="hero-content">
+                        <h1>Build the Amazing app  <br>That Everyone will Love!</h1>
+                        <p>With the saasbiz platform for customer experience, <br>service and support.</p>
+                        <div class="app-btn">
+                            <a href="#"><img src="img/appstore.png" alt="btn"></a>
+                            <a href="#"><img src="img/playstore.png" alt="btn"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero-moc d-none d-lg-block"></div>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 1920 242.6" style="enable-background:new 0 0 1920 242.6;" xml:space="preserve" class="hero-wave">
+                <style type="text/css">
+                    .st0{fill:#FFFFFF;}
+                    .st1{fill:none;}
+                </style>
+                <path class="st0" d="M1920,70.5v172.1H0v-27.9C171.3,122.8,367.9,89,589.6,113.4C923.1,149.9,1014.7,43,1239.7,7  c224.9-35.9,442.2,77.7,576.1,75.6C1853.2,82,1888,78,1920,70.5z"></path>
+                <rect x="-1036" y="-829.4" class="st1" width="1920" height="137.6"></rect>
+                <rect x="-1136" y="-829.4" class="st1" width="2446" height="380"></rect>
+            </svg>
+        </section><!--/.hero-section-->
+        <!-- <section class="page-header padding">
             <div class="anim-elements">
                 <div class="anim-element"></div>
                 <div class="anim-element"></div>
@@ -136,8 +160,47 @@
 		            <p>Multipurpose Saas Startup HTML Template.</p>
 		        </div>
 		    </div>
-		</section><!--/. page-header -->
-       
+		</section> -->
+        <!--/. page-header -->
+        <section class="content-section bd-bottom padding pos-rel">
+            <div class="anim-elements">
+                <div class="anim-element"></div>
+                <div class="anim-element"></div>
+                <div class="anim-element"></div>
+                <div class="anim-element"></div>
+                <div class="anim-element"></div>
+            </div>
+            <div class="container">
+                <div class="row content-wrap">
+                   <div class="col-lg-6 sm-padding wow fadeInLeft" data-wow-delay="300ms">
+                        <img src="img/app-mockup.png" alt="content-img">
+                    </div>
+                    <div class="col-lg-6 sm-padding">
+                        <div class="content-info wow fadeInRight" data-wow-delay="300ms">
+                            <span>Aplikasi Etnochem</span>
+                            <h2>Track Productivity &amp; Keep Your Projects On The Budget!</h2>
+                            <p>We provide marketing services to startups and small businesses to looking for a partner of their digital media, design &amp; development, lead generation and communications requirents.</p>
+                            <ul class="content-feature">
+                                <li class="content-feature-item">
+                                    <i class="sb sb-network color-yellow"></i>
+                                    <div class="content-details">
+                                        <h3>Reporting & Analysis</h3>
+                                        <p>We provide marketing service to startups businesses to looking for a partner digital media.</p>
+                                    </div>
+                                </li>
+                                <li class="content-feature-item">
+                                    <i class="sb sb-target color-blue"></i>
+                                    <div class="content-details">
+                                        <h3>Technical SEO Audit</h3>
+                                        <p>We provide marketing service to startups businesses to looking for a partner digital media.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section><!--/.content-section-->
         <section class="service-section padding">
             <div class="container">
                 <div class="row service-wrap">
