--- a/login.html
+++ b/login.html
@@ -9,9 +9,9 @@
 		<meta name="description" content="Multipurpose Saas Startup HTML Template">
         <meta name="author" content="DynamicLayers">
        
-        <title>Saasbiz | Multipurpose Saas Startup HTML Template</title>
+        <title>Etnochem| Multipurpose Saas Startup HTML Template</title>
         
-		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+		<link rel="shortcut icon" type="image/x-icon" href="img/clients/client-6.png">
 		
 		<!-- Font Awesome CSS -->
         <link rel="stylesheet" href="css/fontawesome.min.css">
