--- a/about-us.html
+++ b/about-us.html
@@ -9,9 +9,9 @@
 		<meta name="description" content="Multipurpose Saas Startup HTML Template">
         <meta name="author" content="DynamicLayers">
        
-        <title>Saasbiz | Multipurpose Saas Startup HTML Template</title>
+        <title>Etnochem| Tentang Kami</title>
         
-		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+		<link rel="shortcut icon" type="image/x-icon" href="img/clients/client-6.png">
 		
 		<!-- Font Awesome CSS -->
         <link rel="stylesheet" href="css/fontawesome.min.css">
@@ -62,9 +62,9 @@
                     <div class="d-flex menu-wrap">
                        <div id="mainmenu" class="mainmenu">
                            <ul class="nav">
-                               <li><a data-scroll class="nav-link active" href="index.html">Home<span class="sr-only">(current)</span></a> 
+                               <li><a data-scroll class="nav-link active" href="index.html">Beranda<span class="sr-only">(current)</span></a> 
                                     <ul>
-                                       <li><a href="index.html">Home Design Studio</a></li>
+                                       <li><a href="index.html">Beranda Design Studio</a></li>
                                        <li><a href="index-2.html">Home Web hosting</a></li>
                                        <li><a href="index-3.html">Home Support Desk</a></li>
                                        <li><a href="index-4.html">Home Apps Landing</a></li>
@@ -77,10 +77,12 @@
                                        <li><a href="about-company.html">About Company</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Services</a> 
+                                <li><a href="#">Produk</a> 
                                     <ul>
-                                       <li><a href="services-1.html">Aplikasi</a></li>
-                                       <li><a href="services-2.html">Kit Edukasi</a></li>
+                                       <li>
+                                            <a href="services-1.html"><img src="img/icon/smartphone.png" height="50" width="50" alt=""> Aplikasi</a>
+                                        </li>
+                                       <li><a href="services-2.html"><img src="img/icon/kit.png" height="50" width="50" sizes="cover" alt=""> Kit Edukasi</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="#">Case Studies</a> 
@@ -215,7 +217,7 @@
                     <span>Team Members</span>
                     <h2>Our Expert Team Would Like <br> To Hear From You!</h2>
                 </div>
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-lg-3 col-sm-6 sm-padding">
                        <div class="team-wrap">
                            <div class="team-box">
@@ -268,6 +270,40 @@
                        </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 sm-padding">
+                        <div class="team-wrap">
+                           <div class="team-box">
+                                <div class="overlay"></div>
+                                <img src="img/team-4.jpg" alt="img">
+                                <ul class="team-social">
+                                    <li><a href="#"><i class="ti-facebook"></i></a></li>
+                                    <li><a href="#"><i class="ti-twitter"></i></a></li>
+                                    <li><a href="#"><i class="ti-instagram"></i></a></li>
+                                    <li><a href="#"><i class="ti-youtube"></i></a></li>
+                                </ul>
+                            </div>
+                            <div class="team-content">
+                                <h3>Kyle Frederick<span>Developer</span></h3>
+                            </div>
+                       </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 sm-padding mt-20">
+                        <div class="team-wrap">
+                           <div class="team-box">
+                                <div class="overlay"></div>
+                                <img src="img/team-4.jpg" alt="img">
+                                <ul class="team-social">
+                                    <li><a href="#"><i class="ti-facebook"></i></a></li>
+                                    <li><a href="#"><i class="ti-twitter"></i></a></li>
+                                    <li><a href="#"><i class="ti-instagram"></i></a></li>
+                                    <li><a href="#"><i class="ti-youtube"></i></a></li>
+                                </ul>
+                            </div>
+                            <div class="team-content">
+                                <h3>Kyle Frederick<span>Developer</span></h3>
+                            </div>
+                       </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 sm-padding mt-20">
                         <div class="team-wrap">
                            <div class="team-box">
                                 <div class="overlay"></div>
