--- a/index-3.html
+++ b/index-3.html
@@ -58,7 +58,7 @@
         <header id="header" class="header-section">
             <div class="container">
                 <nav class="navbar ">
-                    <a href="index.html" class="navbar-brand"><img src="img/logo-dark.png" alt="Saasbiz"></a>
+                    <a href="index.html" class="navbar-brand"><img src="img/Logo/logo panjang-dark.png" alt="Saasbiz"></a>
                     <div class="d-flex menu-wrap">
                        <div id="mainmenu" class="mainmenu">
                            <ul class="nav">
@@ -363,7 +363,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-sm-6 sm-padding">
                         <div class="widget-content">
-                            <a href="#"><img src="img/logo-dark.png" alt="brand"></a>
+                            <a href="#"><img src="img/Logo/logo panjang-dark.png" alt="brand"></a>
                             <p>Building your own home is about desire, fantasy. But it’s achievable anyone can do it.</p>
                             <ul class="widget-social">
                                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
