--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <header id="header" class="header-section">
             <div class="container">
                 <nav class="navbar ">
-                    <a href="index.html" class="navbar-brand"><img src="img/Logo/logo (1).png" alt="Saasbiz"></a>
+                    <a href="index.html" class="navbar-brand"><img src="img/Logo/logo panjang-dark.png" alt="Saasbiz"></a>
                     <div class="d-flex menu-wrap">
                        <div id="mainmenu" class="mainmenu">
                            <ul class="nav">
