--- a/index-5.html
+++ b/index-5.html
@@ -60,7 +60,7 @@
                 <nav class="navbar ">
                     <a href="index.html" class="navbar-brand">
                         <img class="logo-light" src="img/logo-light.png" alt="Saasbiz">
-                        <img class="logo-dark" src="img/logo-dark.png" alt="Saasbiz">
+                        <img class="logo-dark" src="img/Logo/logo panjang-dark.png" alt="Saasbiz">
                     </a>
                     <div class="d-flex menu-wrap">
                        <div id="mainmenu" class="mainmenu">
