add privacy police

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        
         <title>Etnochem | Beranda</title>
         
-		<link rel="shortcut icon" type="image/x-icon" href="img/clients/client-6.png">
+		<link rel="shortcut icon" type="image/x-icon" href="img/Logo/logo-kotak.png">
 		
 		<!-- Font Awesome CSS -->
         <link rel="stylesheet" href="css/fontawesome.min.css">
@@ -174,7 +174,7 @@
                          <img src="img/clients/client-5.png" alt="sponsor">
                      </div>
                      <div class="sponsor-item">
-                         <img src="img/clients/client-6.png" alt="sponsor">
+                         <img src="img/Logo/logo-kotak.png" alt="sponsor">
                      </div>
                  </div>
              </div>
