--- a/services-2.html
+++ b/services-2.html
@@ -11,7 +11,7 @@
        
         <title>Etnochem | Kit</title>
         
-		<link rel="shortcut icon" type="image/x-icon" href="img/clients/client-6.png">
+		<link rel="shortcut icon" type="image/x-icon" href="img/Logo/logo-kotak.png">
 		
 		<!-- Font Awesome CSS -->
         <link rel="stylesheet" href="css/fontawesome.min.css">
