add icon for nav & edit footer

--- a/blog-grid.html
+++ b/blog-grid.html
@@ -281,7 +281,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-sm-6 sm-padding">
                         <div class="widget-content">
-                            <a href="#"><img src="img/logo-light.png" alt="brand"></a>
+                            <a href="#"><img src="img/Logo/logo panjang-dark.png" alt="brand"></a>
                             <p>Building your own home is about desire, fantasy. But it’s achievable anyone can do it.</p>
                         </div>
                     </div>
