--- a/index-4.html
+++ b/index-4.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <nav class="navbar ">
                     <a href="index.html" class="navbar-brand">
-                        <img class="logo-light" src="img/logo-light.png" alt="Saasbiz">
+                        <img class="logo-light" src="img/Logo/logo panjang-dark.png" alt="Saasbiz">
                         <img class="logo-dark" src="img/Logo/logo panjang-dark.png" alt="Saasbiz">
                     </a>
                     <div class="d-flex menu-wrap">
@@ -522,7 +522,7 @@
                 <div class="row widget-wrap">
                     <div class="col-lg-6 col-sm-6 sm-padding">
                         <div class="widget-content">
-                            <a href="#"><img src="img/logo-light.png" alt="brand"></a>
+                            <a href="#"><img src="img/Logo/logo panjang-dark.png" alt="brand"></a>
                             <p>Building your own home is about <br> desire, fantasy. But it’s achievable <br>anyone can do it.</p>
                             <ul class="widget-social color-white">
                                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
