--- a/index-5.html
+++ b/index-5.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <nav class="navbar ">
                     <a href="index.html" class="navbar-brand">
-                        <img class="logo-light" src="img/logo-light.png" alt="Saasbiz">
+                        <img class="logo-light" src="img/Logo/logo panjang-dark.png" alt="Saasbiz">
                         <img class="logo-dark" src="img/Logo/logo panjang-dark.png" alt="Saasbiz">
                     </a>
                     <div class="d-flex menu-wrap">
@@ -536,7 +536,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-sm-6 sm-padding">
                         <div class="widget-content">
-                            <a href="#"><img src="img/logo-light.png" alt="brand"></a>
+                            <a href="#"><img src="img/Logo/logo panjang-dark.png" alt="brand"></a>
                             <p>Building your own home is about desire, fantasy. But it’s achievable anyone can do it.</p>
                         </div>
                     </div>
