--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                        <li><a href="about-company.html">About Company</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Produk</a> 
+                                <li><a href="#">Produk <i class="fa fa-caret-square-down"></i></a> 
                                     <ul>
                                        <li>
                                             <a href="services-1.html"><img src="img/icon/smartphone.png" height="50" width="50" alt=""> Aplikasi</a>
@@ -174,7 +174,7 @@
                          <img src="img/clients/client-5.png" alt="sponsor">
                      </div>
                      <div class="sponsor-item">
-                         <img src="img/Logo/logo-kotak.png" alt="sponsor">
+                         <img src="img/clients/client-6.png" alt="sponsor">
                      </div>
                  </div>
              </div>
@@ -515,7 +515,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-sm-6 sm-padding">
                         <div class="widget-content">
-                            <a href="#"><img src="img/logo-light.png" alt="brand"></a>
+                            <a href="#"><img src="img/Logo/logo panjang-dark.png" alt="brand"></a>
                             <p>Building your own home is about desire, fantasy. But it’s achievable anyone can do it.</p>
                         </div>
                     </div>
