--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                 <div class="row hero-wrap d-flex align-items-center">
                     <div class="col-lg-6 sm-padding">
                         <div class="hero-content">
-                            <h1>Drive More Customers <br>Through Digital.</h1>
-                            <p>We provide marketing services to startups and small businesses to looking for a partner of their digital media, design & development, lead generation and communications requirents.</p>
+                            <h1>Selamat Datang di Etnochem:<br>Belajar Kimia dengan asik melalui Budaya</h1>
+                            <p>Etnochem edisi batik malangan adalah inovasi kit edukasi yang menggabungkan konsep kimia, teknologi, seni, dan budaya pada pembelajaran asam basa. </p>
                             <div class="btn-group">
                                 <a href="#" class="default-btn">Get Started</a>
                                 <a href="#" class="play-btn"><i class="fas fa-play"></i>How It Works</a>
@@ -179,40 +179,40 @@
                  </div>
              </div>
          </div><!--/. sponsor-section -->
-        <section class="promo-section bd-bottom padding">
+         <section class="promo-section bg-grey promo-4 bd-bottom padding">
             <div class="container">
-                <h2 class="mx-auto">Keunggulan Etnochem</h2>
-                <div class="row promo-wrap">
-                    <div class="col-lg-3 col-sm-6 sm-padding">
+                <h2>Keunggulan Etnochem</h2>
+                <div class="row promo-wrap justify-content-center">
+                    <div class="col-lg-4 col-sm-6 sm-padding mt-20">
                         <div class="promo-item wow fadeInUp" data-wow-delay="200ms">
-                            <i class="sb sb-chart"></i>
-                            <i class="sb sb-chart transparent"></i>
-                            <h3>Data Analytics</h3>
-                            <p>We provide marketing service to startups businesses to looking for a partner digital media.</p>
+                            <img src="img/Keunggulan/steam.png" alt="" width="100">
+                            <i class="transparent"><img src="img/Keunggulan/steam.png" alt="" width="150"></i>
+                            <h3>Integrasi proyek berbasis STEAM-2C </h3>
+                            <p>Memudahkan siswa dalam belajar konsep asam basa secara komprehensif melalui pendekatan STEAM-2C yang mengaitkan dengan kearifan lokal khususnya pada Batik Malangan.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6 sm-padding">
+                    <div class="col-lg-4 col-sm-6 sm-padding mt-20">
                         <div class="promo-item wow fadeInUp" data-wow-delay="300ms">
-                                <i class="sb sb-stats"></i>
-                                <i class="sb sb-stats transparent"></i>
-                            <h3>Digital Marketing</h3>
-                            <p>We provide marketing service to startups businesses to looking for a partner digital media.</p>
+                            <img src="img/Keunggulan/green-chemistry.png" alt="" width="100">
+                            <i class="transparent"><img src="img/Keunggulan/green-chemistry.png" alt="" width="150"></i>
+                            <h3>Penggunaan pewarna alami dengan konsep Green Chemistry</h3>
+                            <p>Mengusung konsep Green Chemistry dengan menggunakan pewarna batik alami yang ramah lingkungan guna meminimalisir limbah pewarna sintetis yang dapat merusak lingkungan</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6 sm-padding">
+                    <div class="col-lg-4 col-sm-6 sm-padding mt-20">
                         <div class="promo-item wow fadeInUp" data-wow-delay="400ms">
-                                <i class="sb sb-hours"></i>
-                                <i class="sb sb-hours transparent"></i>
-                            <h3>Customer Care</h3>
-                            <p>We provide marketing service to startups businesses to looking for a partner digital media.</p>
+                            <img src="img/Keunggulan/AR.png" alt="" width="100">
+                            <i class="transparent"><img src="img/Keunggulan/AR.png" alt="" width="150"></i>
+                            <h3>Teknologi AR untuk memvisualisasikan reaksi kimia</h3>
+                            <p>Reaksi kimia yang tergolong abstrak mampu ditampilkan molekul secara 3D dan interaktif yang dapat diakses melalui smartphone.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6 sm-padding">
-                        <div class="promo-item wow fadeInUp" data-wow-delay="500ms">
-                            <i class="sb sb-target"></i>
-                            <i class="sb sb-target transparent"></i>
-                            <h3>Email Marketing</h3>
-                            <p>We provide marketing service to startups businesses to looking for a partner digital media.</p>
+                    <div class="col-lg-4 col-sm-6 sm-padding mt-20">
+                        <div class="promo-item wow fadeInUp" data-wow-delay="400ms">
+                            <img src="img/Keunggulan/app.png" alt="" width="100">
+                            <i class="transparent"><img src="img/Keunggulan/app.png" alt="" width="150"></i>
+                            <h3>Materi pembelajaran yang lengkap dalam aplikasi disertai buku panduan.</h3>
+                            <p>Kombinasi dari aplikasi dan buku panduan memastikan Anda memiliki akses ke informasi yang lengkap dan beragam. Anda dapat memilih untuk belajar secara interaktif dengan aplikasi kami atau merenungkan materi yang lebih mendalam dengan buku panduan.</p>
                         </div>
                     </div>
                 </div>
@@ -297,9 +297,9 @@
                     <div class="cd-pricing-switcher text-center">
                         <p class="fieldset">
                             <input type="radio" name="duration-1" value="monthly" id="monthly-1" checked>
-                            <label for="monthly-1">Monthly</label>
+                            <label for="monthly-1">Kit</label>
                             <input type="radio" name="duration-1" value="yearly" id="yearly-1">
-                            <label for="yearly-1">Yearly</label>
+                            <label for="yearly-1">Aplikasi</label>
                             <span class="cd-switch"></span>
                         </p>
                     </div>
@@ -312,8 +312,8 @@
                                     <ul class="cd-pricing-wrapper">
                                         <li data-type="monthly" class="is-visible pricing-box">
                                             <div class="pricing-head">
-                                                <img src="img/pricing-head-1.jpg" alt="img">
-                                                <h3>$29.00</h3>
+                                                <img src="img/Kit/Picture1.jpg" alt="img">
+                                                <h3>Rp.430.000</h3>
                                                 <span>Starter</span>
                                             </div>
                                             <ul class="pricing-list">
@@ -349,8 +349,8 @@
                                         <li data-type="monthly" class="is-visible pricing-box">
                                            <div class="price-tag"><span>Recommended</span></div>
                                             <div class="pricing-head">
-                                                <img src="img/pricing-head-2.jpg" alt="img">
-                                                <h3>$49.00</h3>
+                                                <img src="img/Kit/Picture1.jpg" alt="img">
+                                                <h3>Rp.430.000</h3>
                                                 <span>Premium</span>
                                             </div>
                                             <ul class="pricing-list">
